// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iCoGMd cXXTLp"
>
  <li
    className="sc-fujyAs bBMlZd"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fujyAs bBMlZd"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fujyAs bBMlZd"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-fujyAs bBMlZd"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iCoGMd cXXTLp"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iCoGMd cXXTLp"
>
  <li
    className="sc-fujyAs bBMlZd"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fujyAs bBMlZd"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fujyAs bBMlZd"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
